# cloudlang

./: .gitignore  AGENTS.md  LICENSE.md  README.md  cloudlang.opam  dune-project
.github/workflows/: ci.yml
.opencode/context/: cloudlang-architecture-design.md  typescript-ast-json-research.md  typescript-ast-summary.md
docs/: specification.md
examples/: closure_worker.cl  hello.cl  kv-store.ts
lib/: ast.ml  ast.mli  cloudlang.ml  cloudlang.mli  decompose.ml  decompose.mli  dune  ir.ml  ir.mli  scope.ml  scope.mli  string_list.ml  string_list.mli
test/: dune  fixture.ml  test_cloudlang.ml  test_decompose.ml  test_generate.ml  test_ir.ml  test_scope.ml
